[gd_scene load_steps=7 format=3 uid="uid://cyr2guyycxmrf"]

[ext_resource type="Script" path="res://scenes/characters/3DPlayer.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bgvpyeyaa1bt0" path="res://resources/3D/city_exterior.blend" id="2_p351j"]
[ext_resource type="PackedScene" uid="uid://b7kq33w3m12sj" path="res://scenes/UI & misc/TouchScreen HUD.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dvjdmv7f0loy" path="res://resources/3D/overworld map.blend" id="3_xxeqk"]
[ext_resource type="Script" path="res://scenes/UI & misc/Exit3D.gd" id="5"]

[sub_resource type="Environment" id="1"]
ambient_light_color = Color(0.439216, 0.439216, 0.439216, 1)

[node name="Overworld3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.142953, -0.00279304, -0.989726, -0.0318954, 0.99949, 0.00178629, 0.989215, 0.0318231, -0.142969, -5.89927, 1.40431, -0.367564)
current = true
script = ExtResource("2")

[node name="OmniLight3D" type="OmniLight3D" parent="Camera3D"]
transform = Transform3D(-0.142953, -0.0318954, 0.989215, -0.00279304, 0.99949, 0.031823, -0.989725, 0.00178628, -0.142969, 0.134451, 3.0819, -0.954667)
omni_range = 3.065

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("1")

[node name="city_exterior" parent="WorldEnvironment" instance=ExtResource("2_p351j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.2248, -3.74203, -8.71941)

[node name="overworld map" parent="WorldEnvironment" instance=ExtResource("3_xxeqk")]
transform = Transform3D(1, 6.20164e-17, 0, 2.84061e-16, 1, 0, 0, 5.55112e-17, 1, 0, 0, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.999955, 1.98448e-09, 0.00945957, -1.97906e-09, 1, -5.82077e-10, -0.00945957, 5.6333e-10, 0.999955, 0.00746644, 3.38803, -0.329723)

[node name="OmniLight2" type="OmniLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.999955, 1.98448e-09, 0.00945957, -1.97906e-09, 1, -5.82077e-10, -0.00945957, 5.6333e-10, 0.999955, 23.1197, 3.38803, 3.42475)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 0.934739, 0.355335, 0, -0.355335, 0.934739, 9.18124, 6.98328, 0)
shadow_enabled = true

[node name="Area3D" type="Area3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 2.45492, 0, 0, 0, 18.2519, 15.1606, 0, 2.009)
script = ExtResource("5")
to_scene = "res://scenes/levels/Building1.tscn"

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="WorldEnvironment/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.08679, 0.818834, -0.0901022)
polygon = PackedVector2Array(11.5037, 3.15512, 11.5656, 0.161346, 15.216, 0.153553, 15.0923, 3.33855)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TouchInterface" parent="CanvasLayer" instance=ExtResource("3")]

[connection signal="body_entered" from="WorldEnvironment/Area3D" to="WorldEnvironment/Area3D" method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="WorldEnvironment/Area3D" method="_on_Timer_timeout"]
